# vlmc

./: CMakeLists.txt  Makefile.am  NEWS
src/: CMakeLists.txt
src/Backend/: CMakeLists.txt  IMultiTrack.h  ITrack.h
src/Backend/MLT/: MLTMultiTrack.cpp  MLTMultiTrack.h  MLTParameterInfo.cpp  MLTTrack.cpp  MLTTrack.h
src/Backend/VLC/: CMakeLists.txt  VLCBackend.cpp  VLCBackend.h
src/Commands/: Commands.cpp  Commands.h
src/EffectsEngine/: EffectHelper.cpp  EffectHelper.h
src/Gui/: MainWindow.cpp  MainWindow.h  WorkflowFileRendererDialog.h
src/Gui/effectsengine/: Effect.qml  EffectInstanceWidget.cpp  EffectInstanceWidget.h  EffectWidget.cpp  EffectWidget.h  EffectsListView.cpp  EffectsListView.qml
src/Gui/media/: ClipMetadataDisplayer.h
src/Gui/preview/: PreviewWidget.cpp
src/Gui/timeline/: Clip.qml  Timeline.cpp  Timeline.h  Track.qml  TrackContainer.qml  TransitionItem.qml  main.qml
src/Gui/transition/: TransitionsListView.cpp  TransitionsListView.h  TransitionsListView.qml
src/Main/: main.cpp
src/Media/: Media.cpp  Media.h
src/Transition/: Transition.cpp  Transition.h
src/Workflow/: Helper.h  MainWorkflow.cpp  MainWorkflow.h  SequenceWorkflow.cpp  SequenceWorkflow.h  Track.cpp  Track.h
tests/: CMakeLists.txt  VLCBackendTest.cpp  VLCBackendTest.h  vlmc-test.cpp
ts/: vlmc_am_ET.ts  vlmc_ar_SA.ts  vlmc_bn_IN.ts  vlmc_br_FR.ts  vlmc_bs_BA.ts  vlmc_ca_ES.ts  vlmc_co_FR.ts  vlmc_cs_CZ.ts  vlmc_cy_GB.ts  vlmc_da_DK.ts  vlmc_de_DE.ts  vlmc_el_GR.ts  vlmc_es_ES.ts  vlmc_es_MX.ts  vlmc_et_EE.ts  vlmc_eu_ES.ts  vlmc_fi_FI.ts  vlmc_fr_FR.ts  vlmc_fy_NL.ts  vlmc_gl_ES.ts  vlmc_he_IL.ts  vlmc_hi_IN.ts  vlmc_hu_HU.ts  vlmc_id_ID.ts  vlmc_is_IS.ts  vlmc_it_IT.ts  vlmc_ja_JP.ts  vlmc_km_KH.ts  vlmc_ko_KR.ts  vlmc_lt_LT.ts  vlmc_mr_IN.ts  vlmc_ms_MY.ts  vlmc_nb_NO.ts  vlmc_nl_NL.ts  vlmc_nn_NO.ts  vlmc_pl_PL.ts  vlmc_pt_BR.ts  vlmc_pt_PT.ts  vlmc_ro_RO.ts  vlmc_ru_RU.ts  (+12 more)
